--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "naive-ui": "^2.43.1",
     "pinia": "^2.3.1",
     "qs": "^6.14.0",
+    "sodiaoeditor-ie8-vue": "github:tlzzu/SoDiaoEditor-Vue",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "vue-types": "^4.2.1"
